--- a/partners/heritage-trust/main.css
+++ b/partners/heritage-trust/main.css
@@ -16,6 +16,10 @@
  * ------------------------------------ //
 */
 
+h1 {
+    color: red;
+}
+
 /* 
  * ------------------------------------ \\
  * End Typography
