--- a/partners/heritage-trust/main.css
+++ b/partners/heritage-trust/main.css
@@ -123,7 +123,7 @@ div.notion-header__cover.no-cover {
 }
 
 /* Next-section link */
-#block-180a74bd4d75427ebbaf38ed86989760 .notion-column:nth-of-type(2) {
+article > .notion-column-list:last-child .notion-column:nth-of-type(2) {
     text-align: right;
 }
 
