--- a/partners/heritage-trust/main.css
+++ b/partners/heritage-trust/main.css
@@ -123,7 +123,7 @@ div.notion-header__cover.no-cover {
 }
 
 /* Next-section link */
-article > .notion-column-list:last-child .notion-column:nth-of-type(2) {
+:not(.page__index) article > .notion-column-list:last-child .notion-column:nth-of-type(2) {
     text-align: right;
 }
 
