--- a/partners/heritage-trust/main.css
+++ b/partners/heritage-trust/main.css
@@ -118,7 +118,7 @@ div.notion-header__cover.no-cover {
 }
 
 /* Inputs list: Item border */
-.parent-page__index .notion-collection-list__item .notion-property__title {
+.parent-page__index .notion-collection-list__item .notion-property__title span {
     border-bottom: none!important;
 }
 
