--- a/partners/heritage-trust/main.css
+++ b/partners/heritage-trust/main.css
@@ -141,18 +141,18 @@ div.notion-header__cover.no-cover {
 }
 
 /* Inputs list: Item border */
-.parent-page__index .notion-collection-list__item .notion-property__title span {
+.parent-page__welcome .notion-collection-list__item .notion-property__title span {
     border-bottom: none!important;
 }
 
 /* Next-section link */
-.parent-page__index article > .notion-column-list:last-child .notion-column {
+.parent-page__welcome article > .notion-column-list:last-child .notion-column {
     width: 50%!important;
     margin-inline-start: 0!important;
 }
 
 /* Next-section link */
-.parent-page__index article > .notion-column-list:last-child .notion-column:nth-of-type(2) {
+.parent-page__welcome article > .notion-column-list:last-child .notion-column:nth-of-type(2) {
     text-align: right;
 }
 
@@ -283,17 +283,17 @@ div.super-footer.stack {
 
 /* 
  * ------------------------------------ \\
- * Homepage
+ * Welcome Page
  * ------------------------------------ //
 */
 
-#page-index .notion-header__content.max-width,
-#page-index .super-content.max-width {
+.page__welcome .notion-header__content.max-width,
+.page__welcome .super-content.max-width {
     max-width: 1100px;
 }
 
 /* 
  * ------------------------------------ \\
- * End Homepage
+ * End Welcome Page
  * ------------------------------------ //
 */
