--- a/partners/heritage-trust/main.css
+++ b/partners/heritage-trust/main.css
@@ -10,7 +10,7 @@
  * Guide Sections
  * Notion Blocks
  * Site Footer
- * Homepage
+ * Welcoem Page
  * ------------------------------------ \\
  * ------------------------------------ //
 */
