--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ h1 {
     margin: 0;
 }
 
+h1 strong {
+    font-weight: 800;
+}
+
 @media screen and (max-width: 1024px) {
     h1 {
         font-size: 42px;
