--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 }
 
 html {
+    font-family: 'Geist', mono;
     font-size: 18px;
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
