--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@
     src: url('assets/fonts/Geist[wght].ttf');
 }
 
-html {
+html, body {
     font-family: 'Geist', mono;
+}
+
+html {
     font-size: 18px;
     font-weight: 400;
     -webkit-font-smoothing: antialiased;
@@ -71,7 +74,6 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: Geist;
 }
 
 * {
