--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 @font-face {
     font-family: 'Geist';
     src: url('assets/fonts/Geist[wght].ttf');
+    font-weight: 100 900;
 }
 
 html, body {
