--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 }
 
 html, body {
-    font-family: 'Geist', mono;
+    font-family: 'Geist', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 html {
@@ -170,6 +170,7 @@ figure {
  .hero__background video,
  .hero__background img {
     object-fit: cover;
+    object-position: center bottom;
     filter: brightness(64%);
  }
 
@@ -258,7 +259,7 @@ figure {
 
 @media screen and (max-width: 768px) {
     #insights .container {
-        padding: 44px 0 60px;
+        padding: 44px 0;
     }
 }
 
@@ -282,7 +283,7 @@ figure {
 
 @media screen and (max-width: 768px) {
  #insights .insights__title img {
-     margin: 0 auto 36px;
+     margin: 0 auto 26px;
  }   
 }
 
@@ -323,8 +324,7 @@ figure {
     }
 
     #insights ul li {
-        padding: 0;
-        height: 80px;
+        padding: 18px 0;
     }
 
 }
@@ -366,11 +366,14 @@ figure {
     }
 
     #proNex img {
-        width: 250px;
+        width: 256px;
     }
 
     #notionVip img {
-        width: 74px
+        width: 74px;
+        position: relative;
+        left: 12px;
+        bottom: 2px;
     }
     
 }
