--- a/style.css
+++ b/style.css
@@ -437,7 +437,7 @@ figure {
 }
 
 #clients li:after {
-    content: '//';
+    content: '\\';
     font-weight: 200;
     margin: 0 10px;
 }
@@ -463,7 +463,7 @@ figure {
     min-height: 80vh;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
     #cta .container {
         min-height: 60vh;
     }
