--- a/style.css
+++ b/style.css
@@ -484,13 +484,16 @@ figure {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
 }
 
 .cta__background img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.cta__background ~ * {
+    position: relative;
 }
 
 .cta__logo img {
