--- a/public/assets/styles/style_ai-playbook.css
+++ b/public/assets/styles/style_ai-playbook.css
@@ -13,16 +13,16 @@
 
 @font-face {
     font-family: 'PP Formula';
-    font-weight: 400 500;
+    font-weight: 500;
     font-style: normal;
-    src: url('/assets/fonts/PPFormula-Medium.otf');
+    src: url('assets/fonts/PPFormula-Medium.otf');
 }
 
 @font-face {
     font-family: 'PP Formula';
-    font-weight: 700 800;
+    font-weight: 800;
     font-style: normal;
-    src: url('/assets/fonts/PPFormula-Extrabold.otf');
+    src: url('assets/fonts/PPFormula-Extrabold.otf');
 }
 
 /* -------------------------------------- \\
