--- a/public/assets/styles/style_ai-playbook.css
+++ b/public/assets/styles/style_ai-playbook.css
@@ -11,7 +11,7 @@
  * Fonts
 ** --------------------------------------- */
 
-/* @font-face {
+@font-face {
     font-family: 'PP Formula';
     font-weight: 500;
     font-style: normal;
@@ -23,7 +23,7 @@
     font-weight: 800;
     font-style: normal;
     src: url('assets/fonts/PPFormula-Extrabold.otf');
-} */
+}
 
 /* -------------------------------------- \\
  * End Fonts
