--- a/public/assets/styles/style_ai-playbook.css
+++ b/public/assets/styles/style_ai-playbook.css
@@ -177,11 +177,22 @@ img, svg, video {
 .backgroundMedia__backgroundVideo,
 .backgroundMedia__backgroundPhoto {
     position: absolute;
+    z-index: -1;
+}
+
+.backgroundMedia {
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+}
+
+.backgroundMedia__backgroundVideo,
+.backgroundMedia__backgroundPhoto {
+    width: calc(100% + 10px);
+    height: calc(100% + 10px);
+    top: -5px;
+    left: -5px;
     object-fit: cover;
 }
 
@@ -312,6 +323,7 @@ figure.hero__icon {
 
 .pillar {
     width: 100%;
+    border-width: 1px;
     border-top-style: solid;
     border-color: var(--color_borders_white);
     padding: 39px 0 36px;
