--- a/public/assets/styles/style_ai-playbook.css
+++ b/public/assets/styles/style_ai-playbook.css
@@ -189,8 +189,7 @@ img, svg, video {
 
 .backgroundMedia__backgroundVideo,
 .backgroundMedia__backgroundPhoto {
-    max-width: calc(100% + 10px);
-    width: calc(100% + 10px);
+    width: calc(100%);
     height: calc(100% + 10px);
     top: -5px;
     left: -5px;
