--- a/public/assets/styles/style_ai-playbook.css
+++ b/public/assets/styles/style_ai-playbook.css
@@ -15,14 +15,14 @@
     font-family: 'PP Formula';
     font-weight: 500;
     font-style: normal;
-    src: url('/assets/fonts/PPFormula-Medium.otf');
+    src: url('../fonts/PPFormula-Medium.otf');
 }
 
 @font-face {
     font-family: 'PP Formula';
     font-weight: 800;
     font-style: normal;
-    src: url('/assets/fonts/PPFormula-Extrabold.otf');
+    src: url('../fonts/PPFormula-Extrabold.otf');
 }
 
 /* -------------------------------------- \\
@@ -78,7 +78,7 @@ h2 {
 }
 
 h3 {
-    font-size: 32px;
+    font-size: 37px;
     line-height: 1.5;
 }
 
@@ -185,11 +185,13 @@ img, svg, video {
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .backgroundMedia__backgroundVideo,
 .backgroundMedia__backgroundPhoto {
-    width: calc(100%);
+    max-width: none;
+    width: calc(100% + 10px);
     height: calc(100% + 10px);
     top: -5px;
     left: -5px;
@@ -359,7 +361,7 @@ figure.hero__icon {
 .pillar__arrow {
     width: 8%;
     max-width: 36px;
-    transition: all .4s ease-out;
+    transition: all .5s ease-in-out;
 }
 
 .pillar[expanded] .pillar__arrow {
@@ -368,7 +370,7 @@ figure.hero__icon {
 
 .pillar__content {
     overflow: hidden;
-    transition: all .8s ease-out;
+    transition: all .5s ease-out;
     max-height: 0;
 }
 
